--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>Programmering Afl. 1 - Pong</title>
-    <script src="pong.js" type="text/javascript"></script>
+    <script src="menu.js" type="text/javascript"></script>
   </head>
   <body>
+    <canvas id="myCanvas" width="1000" height="600">
+      <p>Your browser does not support HTML5!</p>
+    </canvas>
+    <script type="text/javascript">
+      init();
+    </script>
+    <!-- <p>FPS: <span id="fps"></span></p> -->
   </body>
 </html>
