--- a/index.html
+++ b/index.html
@@ -2,16 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Programmering Afl. 1 - Pong</title>
-    <script src="menu.js" type="text/javascript"></script>
+    <title>Pong Remake</title>
   </head>
   <body>
-    <canvas id="myCanvas" width="1000" height="600">
-      <p>Your browser does not support HTML5!</p>
-    </canvas>
-    <script type="text/javascript">
-      init();
-    </script>
+    <div class="wrapper">
+      <canvas id="canvas" width="1000" height="600"></canvas>
+    </div>
     <!-- <p>FPS: <span id="fps"></span></p> -->
+    <script src="menu.js" type="text/javascript"></script>
   </body>
 </html>
