--- a/index.html
+++ b/index.html
@@ -2,13 +2,40 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pong Remake</title>
+    <link rel="stylesheet" href="style.css" type="text/css" media="screen">
   </head>
   <body>
     <div class="wrapper">
-      <canvas id="canvas" width="1000" height="600"></canvas>
+      <div class="pause">
+        <a href="javascript:void(0)" class="button" id="b-pause" ><img src="images/pause.png" alt="pause"></a>
+      </div>
+      <div id="pause-menu" class="main">
+        <div id="main">
+          <h1>PAUSED</h1>
+          <ul>
+            <li><a href="javascript:void(0)" class="button" id="b-resume"><h3>Resume</h3></a></li>
+            <li><a href="javascript:void(0)" class="button" id="b-menu"><h3>Menu</h3></a></li>
+          </ul>
+        </div>
+      </div>
+      <div id="menu" class="main">
+        <div id="main">
+          <img class="logo" src="images/logo.png" alt="Logo">
+          <ul>
+            <li><a href="javascript:void(0)" class="button" id="b-play" ><img src="images/play.png" alt="play"></a></li>
+            <li><a href="javascript:void(0)" class="button" id="b-instructions"><img src="images/instructions.png" alt="instructions"></a></li>
+            <li><a href="javascript:void(0)" class="button" id="b-settings"><img src="images/settings.png" alt="settings"></a></li>
+            <li><a href="javascript:void(0)" class="button" id="b-credits"><img src="images/credits.png" alt="credits"></a></li>
+          </ul>
+        </div>
+      </div>
+      <canvas id="canvas" width="1000" height="600">
+        <p>Oh Boy</p>
+        <p>Sick Boy</p>
+      </canvas>
     </div>
-    <!-- <p>FPS: <span id="fps"></span></p> -->
-    <script src="menu.js" type="text/javascript"></script>
+    <script type="text/javascript" src="game.js"></script>
   </body>
 </html>
