Added Co-Op, Added Selection Screen.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="wrapper">
       <div class="pause">
-        <a href="javascript:void(0)" class="button" id="b-pause" ><img src="images/pause.png" alt="pause"></a>
+        <a href="javascript:void(0)" class="button" id="b-pause" ><img src="Images/pause.png" alt="pause"></a>
       </div>
       <div id="pause-menu" class="main">
         <div id="main">
@@ -21,20 +21,25 @@
         </div>
       </div>
       <div id="menu" class="main">
-        <div id="main">
-          <img class="logo" src="images/logo.png" alt="Logo">
+        <div id="main-menu">
+          <img class="logo" src="Images/logo.png" alt="Logo">
           <ul>
-            <li><a href="javascript:void(0)" class="button" id="b-play" ><img src="images/play.png" alt="play"></a></li>
-            <li><a href="javascript:void(0)" class="button" id="b-instructions"><img src="images/instructions.png" alt="instructions"></a></li>
-            <li><a href="javascript:void(0)" class="button" id="b-settings"><img src="images/settings.png" alt="settings"></a></li>
-            <li><a href="javascript:void(0)" class="button" id="b-credits"><img src="images/credits.png" alt="credits"></a></li>
+            <li><a href="javascript:void(0)" class="button" id="b-play" ><img src="Images/play.png" alt="play"></a></li>
+            <li><a href="javascript:void(0)" class="button" id="b-instructions"><img src="Images/instructions.png" alt="instructions"></a></li>
+            <li><a href="javascript:void(0)" class="button" id="b-settings"><img src="Images/settings.png" alt="settings"></a></li>
+            <li><a href="javascript:void(0)" class="button" id="b-credits"><img src="Images/credits.png" alt="credits"></a></li>
+          </ul>
+        </div>
+        <div id="choose-game">
+          <img class="logo" src="Images/logo.png" alt="Logo">
+          <ul>
+            <li><br></li>
+            <li><a href="javascript:void(0)" class="button" id="b-playerVScomputer"><img src="Images/player-vs-computer.png" alt="player-vs-computer"></a></li>
+            <li><a href="javascript:void(0)" class="button" id="b-playerVSplayer"><img src="Images/player-vs-player.png" alt="player-vs-player"></a></li>
           </ul>
         </div>
       </div>
-      <canvas id="canvas" width="1000" height="600">
-        <p>Oh Boy</p>
-        <p>Sick Boy</p>
-      </canvas>
+      <canvas id="canvas" width="1000" height="600"></canvas>
     </div>
     <script type="text/javascript" src="game.js"></script>
   </body>
